refactor: rename RPC tasks to HTTP tasks and remove pagination parameters
